0024050: Voxel_FastConverter::Convert / ConvertUsingSAT - problems in multithreaded scenario

Computing triangle spans using integer numbers.